Changed first page of list to display the next movie and its poster.